fixed landing page display and started addition of navigation drawer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">QuestionBank</string>
+    <string name="title_activity_main">Landing page</string>
+    <string name="title_activity_search">SearchActivity</string>
 </resources>
